// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card renders without crashing 1`] = `
<Connect(Card)
  id="news"
  title="News"
>
  <Component
    style={
      Object {
        "top": -1,
      }
    }
  >
    <Component>
      <DataListView
        card={false}
        data={
          Array [
            Object {
              "date": "2018-01-25T17:51:00+00:00",
              "description": " In both cell cultures and mouse models, a drug used to treat Hepatitis C effectively protected and rescued neural cells infected by the Zika virus - and blocked transmission of the virus to mouse fetuses. Researchers at University of California San Diego School of Medicine, with colleagues in Brazil and elsewhere, say their findings support further investigation of using the repurposed drug as a potential treatment for Zika-infected adults, including pregnant women. ",
              "image": "http://ucsdnews.ucsd.edu/news_uploads/2017_03_23_zika_virus_tem_teaser.jpg",
              "image_lg": "http://ucsdnews.ucsd.edu/news_uploads/2017_03_23_zika_virus_tem.jpg",
              "link": "http://ucsdnews.ucsd.edu/pressrelease/repurposed_drug_found_to_be_effective_against_zika_virus",
              "subtext": "Jan 25th, 2018",
              "title": "Repurposed Drug Found to be Effective against Zika Virus",
            },
          ]
        }
        item="NewsItem"
        rows={3}
        scrollEnabled={false}
      />
      <Touchable
        onPress={[Function]}
      >
        <Component
          style={
            Object {
              "borderTopColor": "#EAEAEA",
              "borderTopWidth": 1,
              "padding": 6,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#034262",
                "fontSize": 20,
                "fontWeight": "300",
                "textAlign": "center",
              }
            }
          >
            View All
          </Text>
        </Component>
      </Touchable>
    </Component>
  </Component>
</Connect(Card)>
`;

exports[`container renders without crashing 1`] = `
<withNavigation(DataListCard)
  data={
    Array [
      Object {
        "date": "2018-01-25T17:51:00+00:00",
        "description": " In both cell cultures and mouse models, a drug used to treat Hepatitis C effectively protected and rescued neural cells infected by the Zika virus - and blocked transmission of the virus to mouse fetuses. Researchers at University of California San Diego School of Medicine, with colleagues in Brazil and elsewhere, say their findings support further investigation of using the repurposed drug as a potential treatment for Zika-infected adults, including pregnant women. ",
        "image": "http://ucsdnews.ucsd.edu/news_uploads/2017_03_23_zika_virus_tem_teaser.jpg",
        "image_lg": "http://ucsdnews.ucsd.edu/news_uploads/2017_03_23_zika_virus_tem.jpg",
        "link": "http://ucsdnews.ucsd.edu/pressrelease/repurposed_drug_found_to_be_effective_against_zika_virus",
        "subtext": "Jan 25th, 2018",
        "title": "Repurposed Drug Found to be Effective against Zika Virus",
      },
    ]
  }
  id="news"
  item="NewsItem"
  title="News"
/>
`;
